--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.google.gms:google-services:4.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,6 +32,7 @@ allprojects {
                     password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
                 }
             }
+            maven { url 'https://jitpack.io'}
         }
     }
 }
