--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.firebaseui:firebase-ui-database:7.1.1'
 
     implementation 'com.cuberto:liquid-swipe:1.0.0'
     //implementation 'com.android.support:design:28.0.0'
@@ -53,5 +54,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
 
     implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
